--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "cyphle-portfolio",
-    "version": "1.0.0",
-    "description": "Portfolio de Cyril PHAM-LE sur Express.js & Hummingbird.js",
-    "private": true,
-    "scripts": {
-      "start": "node ./bin/www-entry",
-      "start-debug": "DEBUG=express-es6-boilerplate:* node ./bin/www-entry"
-    },
-    "dependencies": {
-      "body-parser": "~1.13.2",
-      "compression": "^1.6.2",
-      "connect-flash": "~0.1.1",
-      "cookie-parser": "~1.3.5",
-      "express": "~4.13.1"
-    },
-    "devDependencies": {
-      "babel": "^6.5.2",
-      "babel-cli": "^6.18.0",
-      "babel-istanbul": "^0.12.1",
-      "babel-preset-es2015": "^6.6.0",
-      "babel-register": "^6.7.2",
-      "chai": "^3.5.0",
-      "chai-spies": "^0.7.1",
-      "cheerio": "^0.22.0",
-      "eslint": "^2.5.3",
-      "eslint-config-airbnb": "^6.2.0",
-      "eslint-plugin-react": "^4.2.3",
-      "istanbul": "^0.4.5",
-      "mocha": "^2.5.3",
-      "mocha-junit-reporter": "^1.12.0"
-    },
-    "main": "./bin/www-entry",
-    "repository": "ssh://git@git.cyrilphamle.fr:221/root/portfolio-api.git",
-    "author": "Cyril PHAM-LE <cyrilphamle@gmail.com>",
-    "license": "MIT"
-  }
-  
+  "name": "cyphle-portfolio",
+  "version": "1.0.0",
+  "description": "Portfolio de Cyril PHAM-LE sur Express.js & Hummingbird.js",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www-entry",
+    "watch": "nodemon ./bin/www-entry",
+    "start-debug": "DEBUG=express-es6-boilerplate:* node ./bin/www-entry"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
+    "connect-flash": "~0.1.1",
+    "cookie-parser": "~1.3.5",
+    "express": "~4.13.1"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
+    "babel-istanbul": "^0.12.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "chai-spies": "^0.7.1",
+    "cheerio": "^0.22.0",
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
+    "istanbul": "^0.4.5",
+    "mocha": "^2.5.3",
+    "mocha-junit-reporter": "^1.12.0",
+    "nodemon": "^1.9.1"
+  },
+  "main": "./bin/www-entry",
+  "repository": "ssh://git@git.cyrilphamle.fr:221/root/portfolio-api.git",
+  "author": "Cyril PHAM-LE <cyrilphamle@gmail.com>",
+  "license": "MIT"
+}
