--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "compression": "^1.6.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
-    "express": "~4.13.1"
+    "express": "~4.13.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
