--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.6.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.4",
     "express": "~4.13.1",
     "uuid": "^3.2.1"
   },
