--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.4",
     "express": "~4.13.1",
+    "multer": "^1.3.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
